Name:                Visitor
Version:             1.0
License:             BSD3
License-file:        LICENSE
Author:              Gregory Crosswhite
Maintainer:          Gregory Crosswhite <gcrosswhite@gmail.com>
Stability:           Provisional
Synopsis:            
Description:         
Cabal-version:       >=1.8
Build-type:          Simple
Category:	     

Source-Repository head
  Type:                git
  Location:            git://github.com/gcross/Visitor.git

Source-Repository this
    Type:                git
    Location:            git://github.com/gcross/Visitor.git
--    Tag:                 


Library
    Build-depends:
        AbortT-transformers == 1.0.*,
        AbortT-mtl == 1.0.*,
        base > 4 && < 5,
        bytestring >= 0.9 && < 0.11,
        cereal == 0.3.*,
        cmdtheline == 0.2.*,
        composition >= 0.2 && < 1.1,
        containers >= 0.4 && < 0.6,
        data-ivar == 0.30.*,
        derive >= 2.5.11 && < 2.6,
        directory >= 1.1 && < 1.3,
        either-unwrap == 1.1.*,
        hslogger == 1.2.*,
        hslogger-template == 2.0.*,
        lens >= 3.8 && < 3.10,
        MonadCatchIO-transformers == 0.3.*,
        monoid-statistics == 0.3.*,
        mtl == 2.1.*,
        multiset == 0.2.*,
        operational == 0.2.*,
        prefix-units == 0.1.*,
        pretty == 1.1.*,
        PSQueue == 1.1.*,
        sequential-index == 0.2.*,
        stm >= 2.3 && < 2.5,
        time == 1.4.*,
        transformers >= 0.2 && < 0.4,
        void == 0.6.*,
        yjtools >= 0.9.7 && < 0.10
    Exposed-modules:
        Control.Visitor
        Control.Visitor.Checkpoint
        Control.Visitor.Examples.Queens
        Control.Visitor.Examples.Queens.Implementation
        Control.Visitor.Examples.Tree
        Control.Visitor.Label
        Control.Visitor.Parallel.BackEnd.Threads
        Control.Visitor.Parallel.Common.Message
        Control.Visitor.Parallel.Common.Process
        Control.Visitor.Parallel.Common.Supervisor
        Control.Visitor.Parallel.Common.Supervisor.Implementation
        Control.Visitor.Parallel.Common.Supervisor.RequestQueue
        Control.Visitor.Parallel.Common.VisitorMode
        Control.Visitor.Parallel.Common.Workgroup
        Control.Visitor.Parallel.Common.Worker
        Control.Visitor.Parallel.Main
        Control.Visitor.Path
        Control.Visitor.Utils.Handle
        Control.Visitor.Utils.IntSum
        Control.Visitor.Utils.MonadStacks
        Control.Visitor.Utils.Word_
        Control.Visitor.Utils.WordSum
        Control.Visitor.Workload
        Data.Semiring
        Data.Semiring.NaturalInstances
    Extensions:
    C-sources: c-sources/queens.c
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing
    if flag(pattern-warnings)
        GHC-Options: -fwarn-incomplete-patterns

Flag warnings
    Description: Enables most warnings.
    Default:     False

Flag pattern-warnings
    Description: Enables only pattern match warnings.
    Default:     False

Flag examples
    Description: Enable building the executables.
    Default:     False

Executable count-all-nqueens-solutions
    Main-is: count-all-nqueens-solutions.hs
    Hs-source-dirs: examples
    Build-depends:
        Visitor,
        base > 4 && < 5,
        cereal == 0.3.*,
        cmdtheline == 0.2.*
    if flag(examples)
        Buildable: True
    else
        Buildable: False
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing -threaded
    else
        GHC-Options: -threaded

Executable print-all-nqueens-solutions
    Main-is: print-all-nqueens-solutions.hs
    Hs-source-dirs: examples
    Build-depends:
        Visitor,
        base > 4 && < 5
    if flag(examples)
        Buildable: True
    else
        Buildable: False
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing

Executable count-all-trivial-tree-leaves
    Main-is: count-all-trivial-tree-leaves.hs
    Hs-source-dirs: examples
    Build-depends:
        Visitor,
        base > 4 && < 5,
        cereal == 0.3.*,
        cmdtheline == 0.2.*,
        composition >= 0.2 && < 1.1
    if flag(examples)
        Buildable: True
    else
        Buildable: False
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing -threaded
    else
        GHC-Options: -threaded

Benchmark visitor-versus-list-trivial-tree
    Type: exitcode-stdio-1.0
    Main-is: visitor-versus-list-trivial-tree.hs
    Hs-source-dirs: benchmarks
    Build-depends:
        Visitor,
        base > 4 && < 5,
        criterion >= 0.6 && < 0.9
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing

Benchmark visitor-versus-list-nqueens
    Type: exitcode-stdio-1.0
    Main-is: visitor-versus-list-nqueens.hs
    Hs-source-dirs: benchmarks
    Build-depends:
        Visitor,
        base > 4 && < 5,
        criterion >= 0.6 && < 0.9
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing

Test-Suite tests
    Type: exitcode-stdio-1.0
    Main-is: tests.hs
    Hs-source-dirs: tests
    Build-depends:
        Visitor,
        base > 4 && < 5,
        bytestring >= 0.9 && < 0.11,
        cereal == 0.3.*,
        composition >= 0.2 && < 1.1,
        containers >= 0.4 && < 0.6,
        data-ivar == 0.30.*,
        dlist == 0.5.*,
        either-unwrap == 1.1.*,
        hslogger == 1.2.*,
        hslogger-template == 2.0.*,
        HUnit == 1.2.*,
        lens >= 3.8 && < 3.10,
        operational == 0.2.*,
        random == 1.0.*,
        QuickCheck >= 2.4 && < 2.6,
        quickcheck-instances == 0.3.1,
        smallcheck == 1.0.*,
        stm >= 2.3 && < 2.5,
        test-framework >= 0.6 && < 0.9,
        test-framework-hunit >= 0.2 && < 0.4,
        test-framework-quickcheck2 >= 0.2 && < 0.4,
        test-framework-smallcheck == 0.2.*,
        transformers >= 0.2 && < 0.4,
        uuid == 1.2.*,
        void == 0.6.*
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing -with-rtsopts=-M256M
    else
        GHC-Options: -with-rtsopts=-M256M

Test-Suite test-nqueens
    Type: exitcode-stdio-1.0
    Main-is: test-nqueens.hs
    Hs-source-dirs: tests
    Build-depends:
        Visitor,
        base > 4 && < 5,
        containers >= 0.4 && < 0.6,
        HUnit == 1.2.*,
        QuickCheck >= 2.4 && < 2.6,
        test-framework >= 0.6 && < 0.9,
        test-framework-hunit >= 0.2 && < 0.4,
        test-framework-quickcheck2 >= 0.2 && < 0.4,
        transformers >= 0.2 && < 0.4
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing
