-- @+leo-ver=5-thin
-- @+node:gcross.20101114125204.1254: * @file VisitorT.cabal
-- @@language Haskell
Name:                VisitorT
Version:             1.0
License:             BSD3
License-file:        LICENSE
Author:              Gregory Crosswhite
Maintainer:          Gregory Crosswhite <gcross@phys.washington.edu>
Stability:           Provisional
Synopsis:            
Description:         
Cabal-version:       >=1.2.3
Build-type:          Simple
Category:	     

Library
    Build-depends:
        base > 4 && < 5,
        bytestring == 0.9.*,
        cereal == 0.3.*,
        composition == 0.2.*,
        containers == 0.4.*,
        data-ivar == 0.30.*,
        dlist == 0.5.*,
        either-unwrap == 1.1.*,
        higherorder == 0.0.*,
        monad-loops == 0.3.*,
        MonadCatchIO-transformers == 0.2.*,
        operational == 0.2.*,
        parallel == 3.2.*,
        PSQueue == 1.1.*,
        reactive-banana >= 0.4.3 && < 0.5,
        sequential-index == 0.2.*,
        stm == 2.2.*,
        transformers == 0.2.*
    Exposed-modules:
        Control.Monad.Trans.Visitor
        Control.Monad.Trans.Visitor.Checkpoint
        Control.Monad.Trans.Visitor.Label
        Control.Monad.Trans.Visitor.Path
        Control.Monad.Trans.Visitor.Worker
        Control.Monad.Trans.Visitor.Worker.Reactive
        Control.Monad.Trans.Visitor.WorkerQueue
    Extensions:
-- @-leo
