Name:                VisitorT
Version:             1.0
License:             BSD3
License-file:        LICENSE
Author:              Gregory Crosswhite
Maintainer:          Gregory Crosswhite <gcrosswhite@gmail.com>
Stability:           Provisional
Synopsis:            
Description:         
Cabal-version:       >=1.2.3
Build-type:          Simple
Category:	     

Library
    Build-depends:
        base > 4 && < 5,
        base-unicode-symbols >= 0.2.2 && < 0.3,
        bytestring == 0.9.*,
        cereal == 0.3.*,
        composition >= 0.2 && < 1.1,
        containers == 0.4.*,
        data-accessor == 0.2.*,
        data-accessor-mtl == 0.2.*,
        data-accessor-template == 0.2.*,
        data-ivar == 0.30.*,
        dlist == 0.5.*,
        either-unwrap == 1.1.*,
        higherorder == 0.0.*,
        MonadCatchIO-transformers == 0.3.*,
        operational == 0.2.*,
        sequential-index == 0.2.*,
        transformers >= 0.2 && < 0.4,
        yjtools >= 0.9.7 && < 0.10
    Exposed-modules:
        Control.Monad.Trans.Visitor
        Control.Monad.Trans.Visitor.Checkpoint
        Control.Monad.Trans.Visitor.Label
        Control.Monad.Trans.Visitor.Path
        Control.Monad.Trans.Visitor.Worker
        Control.Monad.Trans.Visitor.Network.Supervisor
        Control.Monad.Trans.Visitor.Network.Worker
    Extensions:
